--- a/css/vertical_nav.css
+++ b/css/vertical_nav.css
@@ -5,8 +5,7 @@
     --nav-color-selected:#add8e6;
     --nav-color-selected-hover:#c7b5b5;
 
-    --textbox-color:#ace3ac;
-    --textbox-color:#d1edd1;
+    --textbox-color:white;
 }
 
 html, body{
