--- a/remnant_2_armour_optimiser/main.css
+++ b/remnant_2_armour_optimiser/main.css
@@ -7,9 +7,11 @@ body {
 }
 
 #resultsTable td, #resultsTable th {
-    border-spacing: 2px;
+    border-style: solid;
     border-width: 1px;
     border-color: gray;
+    padding-left: 4px;
+    padding-right: 4px;
 }
 
 .FillWidth {
